added Lebreton 1992 citation

--- a/analysis/markdown/AckermanLibrary.bib
+++ b/analysis/markdown/AckermanLibrary.bib
@@ -268,6 +268,15 @@
   file = {C\:\\Users\\mikea\\Zotero\\storage\\69XIP6EY\\Axel et al. - Characterizing migration and survival between the .pdf;C\:\\Users\\mikea\\Zotero\\storage\\7KKCRGI5\\Axel et al. - Characterizing migration and survival between the .pdf}
 }
 
+@article{Axelson1990,
+  title = {Salmon {{River Ice Jam Control Studies}}},
+  author = {Axelson, Kathleen D and Foltyn, Edward P and Zabilansky, Leonard J and Lever, James H and Perham, Roscoe E and Gooch, Gordon E},
+  year = {1990},
+  pages = {12},
+  langid = {english},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\9Z2IUZUG\\Axelson et al. - Salmon River Ice Jam Control Studies.pdf}
+}
+
 @article{Ayllon2015,
   title = {The Vgll3 {{Locus Controls Age}} at {{Maturity}} in {{Wild}} and {{Domesticated Atlantic Salmon}} ({{Salmo}} Salar {{L}}.) {{Males}}},
   author = {Ayllon, Fernando and {Kj{\ae}rner-Semb}, Erik and Furmanek, Tomasz and Wennevik, Vidar and Solberg, Monica F. and Dahle, Geir and Taranger, Geir Lasse and Glover, Kevin A. and Alm{\'e}n, Markus S{\"a}llman and Rubin, Carl J and Edvardsen, Rolf B. and Wargelius, Anna},
@@ -2268,6 +2277,23 @@
   file = {C\:\\Users\\mikea\\Zotero\\storage\\WW2QW5TX\\Leberg - 2005 - GENETIC APPROACHES FOR ESTIMATING THE EFFECTIVE SI.pdf}
 }
 
+@article{Lebreton1992,
+  title = {Modeling {{Survival}} and {{Testing Biological Hypotheses Using Marked Animals}}: {{A Unified Approach}} with {{Case Studies}}},
+  shorttitle = {Modeling {{Survival}} and {{Testing Biological Hypotheses Using Marked Animals}}},
+  author = {Lebreton, Jean-Dominique and Burnham, Kenneth P. and Clobert, Jean and Anderson, David R.},
+  year = {1992},
+  month = mar,
+  journal = {Ecological Monographs},
+  volume = {62},
+  number = {1},
+  pages = {67--118},
+  issn = {0012-9615, 1557-7015},
+  doi = {10.2307/2937171},
+  abstract = {The understanding of the dynamics of animal populations and of related ecological and evolutionary issues frequently depends on a direct analysis of life history parameters. For instance, examination of trade-offs between reproduction and survival usually rely on individually marked animals, for which the exact time of death is most often unknown, because marked individuals cannot be followed closely through time. Thus, the quantitative analysis of survival studies and experiments must be based on capturerecapture (or resighting) models which consider, besides the parameters of primary interest, recapture or resighting rates that are nuisance parameters. Capture-recapture models oriented to estimation of survival rates are the result of a recent change in emphasis from earlier approaches in which population size was the most important parameter, survival rates having been first introduced as nuisance parameters. This emphasis on survival rates in capture-recapture models developed rapidly in the 1980s and used as a basic structure the Cormack-Jolly-Seber survival model applied to an homogeneous group of animals, with various kinds of constraints on the model parameters. These approaches are conditional on first captures; hence they do not attempt to model the initial capture of unmarked animals as functions of population abundance in addition to survival and capture probabilities.},
+  langid = {english},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\KG7CS56P\\Lebreton et al. - 1992 - Modeling Survival and Testing Biological Hypothese.pdf}
+}
+
 @article{Leitwein2017,
   title = {Ancestry and Adaptive Evolution of Anadromous, Resident, and Adfluvial Rainbow Trout ( {{{\emph{Oncorhynchus}}}}{\emph{ Mykiss}} ) in the {{San Francisco}} Bay Area: Application of Adaptive Genomic Variation to Conservation in a Highly Impacted Landscape},
   shorttitle = {Ancestry and Adaptive Evolution of Anadromous, Resident, and Adfluvial Rainbow Trout ( {{{\emph{Oncorhynchus}}}}{\emph{ Mykiss}} ) in the {{San Francisco}} Bay Area},
@@ -3254,6 +3280,23 @@
   abstract = {Marine ecosystems occupy 71\% of the surface of our planet, yet we know little about their diversity. Although the inventory of species is continually increasing, as registered by the Census of Marine Life program, only about 10\% of the estimated two million marine species are known. This lag between observed and estimated diversity is in part due to the elusiveness of most aquatic species and the technical difficulties of exploring extreme environments, as for instance the abyssal plains and polar waters. In the last decade, the rapid development of affordable and flexible high-throughput sequencing approaches have been helping to improve our knowledge of marine biodiversity, from the rich microbial biota that forms the base of the tree of life to a wealth of plant and animal species. In this review, we present an overview of the applications of genomics to the study of marine life, from evolutionary biology of non-model organisms to species of commercial relevance for fishing, aquaculture and biomedicine. Instead of providing an exhaustive list of available genomic data, we rather set to present contextualized examples that best represent the current status of the field of marine genomics.},
   langid = {english},
   file = {C\:\\Users\\mikea\\Zotero\\storage\\JEHYWISZ\\Ribeiro et al. - 2017 - Marine genomics News and views.pdf}
+}
+
+@incollection{Rieffenberger1991,
+  title = {"{{Dump Creek}}" {{A Man Made Ecological Disaster}}},
+  booktitle = {Man-{{Caused Problems}} and {{Their Control}}},
+  author = {Rieffenberger, Elizabeth and Baird, Dan W.},
+  year = {1991},
+  pages = {83},
+  langid = {english},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\CCD9QKRQ\\Miller - CHANNEL INSTABILITY IN A STRIP-MINED BASIN.PDF}
+}
+
+@techreport{Rieffenberger1991a,
+  title = {Dump {{Creek}}/{{Moose Creek Watershed Restoration Project History}}},
+  author = {Rieffenberger, Elizabeth},
+  year = {1991},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\UXCPBE9C\\Rieffenberger1991a.pdf}
 }
 
 @article{Rogers2022,
