added lit for hab avail and use analysis

--- a/analysis/markdown/AckermanLibrary.bib
+++ b/analysis/markdown/AckermanLibrary.bib
@@ -519,6 +519,15 @@
   file = {C\:\\Users\\mikea\\Zotero\\storage\\DBRAHBN4\\Boughton et al. - 2021 - Capacity of Two Sierra Nevada Rivers for Reintrodu.pdf}
 }
 
+@techreport{Bovee1986,
+  title = {Development and Evaluation of Habitat Suitability Criteria for Use in the {{Instream Flow Incremental Methodolgy}}.},
+  author = {Bovee, K.D.},
+  year = {1986},
+  number = {Instream Flow Paper 21. U.S. Fish Wildl. Serv. Biol. Rep. 86(7).},
+  pages = {235 pp.},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\I4V9EMC6\\Bovee1986.pdf}
+}
+
 @article{Bowersox2016,
   title = {The {{Genetic Relationship}} between {{Anadromous}} and {{Resident}} {{{\emph{Oncorhynchus}}}}{\emph{ Mykiss}} at a {{Putative Barrier}} with {{Implications}} for {{Habitat Improvement}}},
   author = {Bowersox, Brett and Wickersham, Thea and Redfield, Laura and Ackerman, Michael W.},
@@ -1205,6 +1214,22 @@
   institution = {{Oregon Department of Fish and Wildlife}},
   abstract = {From 2009 to 2011, we identified overwintering reaches and characterized movement behavior and microhabitat suitability for radio-tagged fall migrant spring Chinook salmon Oncorhynchus tshawytscha parr in lower Catherine Creek, northeast Oregon. Primarily, fall migrant parr overwintered in portions of Catherine Creek residing between Union, OR and the mouth of Mill Creek from October through February. To a lesser extent, lower reaches of Catherine Creek and portions of the Grande Ronde River were occupied. Predominantly, movement was directed downstream; however, occasional upstream movement was observed. Median weekly linear range was high during fall migration, while sedentary behavior was prevalent during winter. Brief periods of increased movement were observed during winter and coincided with increased water temperatures. Within the identified overwintering reach, two distinctly different reaches (moderate and low gradient), pertaining to microhabitat availability, were occupied. Generally, free-flowing and surface ice microhabitat use univariate frequency distributions were not significantly different for both reaches. During surface ice conditions, microhabitat use was generally not significantly different between reaches; however, during free-flowing conditions microhabitat use was typically significantly different for all variables measured. Generally, microhabitat use and availability univariate frequency distributions were significantly different for all variables from both reaches (moderate and low gradient) indicating nonrandom habitat use. During free flowing conditions, deep water and slow currents near large woody debris and the bank were most suitable throughout overwintering reaches. Coarse substrates were most suitable in the moderate gradient reach, while fine substrates were most suitable in the low gradient reach. Principal component analyses (PCA) indicated that depth, velocity, substrate, and distance to cover were important microhabitat variable combinations in determining overwintering habitat use in moderate gradient reaches, while depth, velocity, substrate, distance to cover, and distance to bank were most important in low gradient reaches. Radiotelemetry techniques were advantageous toward documenting fall/winter movement and characterizing overwintering microhabitat suitability indices of fall migrant spring Chinook salmon parr. Results from this study suggest appropriate overwintering reaches and types of habitat restoration initiatives needed to successfully implement overwintering habitat improvement projects for spring Chinook salmon parr.},
   file = {C\:\\Users\\mikea\\Zotero\\storage\\L3W7WX32\\Favrot2014.pdf}
+}
+
+@article{Favrot2018,
+  title = {Fall and {{Winter Microhabitat Use}} and {{Suitability}} for {{Spring Chinook Salmon Parr}} in a {{U}}.{{S}}. {{Pacific Northwest River}}},
+  author = {Favrot, Scott D. and Jonasson, Brian C. and Peterson, James T.},
+  year = {2018},
+  month = jan,
+  journal = {Transactions of the American Fisheries Society},
+  volume = {147},
+  number = {1},
+  pages = {151--170},
+  issn = {0002-8487, 1548-8659},
+  doi = {10.1002/tafs.10011},
+  abstract = {Habitat degradation has been implicated as a primary threat to Pacific salmon Oncorhynchus spp. Habitat restoration and conservation are key toward stemming population declines; however, winter microhabitat use and suitability knowledge are lacking for small juvenile salmonids. Our objective was to characterize microhabitat use and suitability for spring Chinook Salmon Oncorhynchus tshawytscha parr during fall and winter. Using radiotelemetry techniques during October\textendash February (2009\textendash 2011), we identified fall and winter microhabitat use by spring Chinook Salmon parr in Catherine Creek, northeastern Oregon. Tagged fish occupied two distinct gradient reaches (moderate and low). Using a mixed-effects logistic regression resource selection function (RSF) model, we found evidence that microhabitat use was similar between free-flowing and surface ice conditions. However, habitat use shifted between seasons; most notably, there was greater use of silt substrate and areas farther from the bank during winter. Between gradients, microhabitat use differed with greater use of large wood (LW) and submerged aquatic vegetation in the low-gradient reach. Using a Bayesian RSF approach, we developed gradient-specific habitat suitability criteria. Throughout the study area, deep depths and slow currents were most suitable, with the exception of the low-gradient reach where moderate depths were optimal. Near-cover coarse and fine substrates were most suitable in the moderateand low-gradient reaches, respectively. Near-bank LW was most suitable throughout the study area. Multivariate principal component analyses (PCA) indicated co-occurring deep depths supporting slow currents near cover were intensively occupied in the moderate-gradient reach. In the low-gradient reach, PCA indicated co-occurring moderate depths, slow currents, and near-bank cover were most frequently occupied. Our study identified suitable and interrelated microhabitat combinations that can guide habitat restoration for fall migrant and overwintering Chinook Salmon parr in Catherine Creek and potentially the Pacific Northwest.},
+  langid = {english},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\NEAHQKZD\\Favrot et al. - 2018 - Fall and Winter Microhabitat Use and Suitability f.pdf}
 }
 
 @article{Favrot2020,
@@ -1954,6 +1979,22 @@
   file = {C\:\\Users\\mikea\\Zotero\\storage\\L4VZ9JFF\\Jenkins et al. - 2018 - Reproductive Performance and Energy Balance in Con.pdf}
 }
 
+@article{Johnson1980,
+  title = {The {{Comparison}} of {{Usage}} and {{Availability Measurements}} for {{Evaluating Resource Preference}}},
+  author = {Johnson, Douglas H.},
+  year = {1980},
+  month = feb,
+  journal = {Ecology},
+  volume = {61},
+  number = {1},
+  pages = {65--71},
+  issn = {00129658},
+  doi = {10.2307/1937156},
+  abstract = {Modern ecological research often involves the comparison of the usage of habitat types or food items to the availability of those resources to the animal. Widely used methods of determining preference from measurements of usage and availability depend critically on the array of components that the researcher, often with a degree of arbitrariness, deems available to the animal. This paper proposes a new method, based on ranks of components by usage and by availability. A virtue of the rank procedure is that it provides comparable results whether a questionable component is included or excluded from consideration. Statistical tests of significance are given for the method.},
+  langid = {english},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\BNPTBEP9\\Johnson - 1980 - The Comparison of Usage and Availability Measureme.pdf}
+}
+
 @techreport{JointColumbiaRiverManagementStaff2019,
   title = {2019 {{Joint Staff Report}}: {{Stock Status}} and {{Fisheries}} for {{Spring Chinook}}, {{Summer Chinook}}, {{Sockeye}}, {{Steelhead}}, and {{Other Species}}},
   author = {Joint Columbia River Management Staff},
@@ -2626,6 +2667,17 @@
   file = {C\:\\Users\\mikea\\Zotero\\storage\\S4Y43B2S\\McKinney et al. - 2017 - Managing mixed-stock fisheries genotyping multi-S.pdf}
 }
 
+@incollection{McMahon1996,
+  title = {Aquatic Habitat Measurements},
+  booktitle = {B.{{R}}. {{Murphy}} and {{D}}.{{W}}. {{Willis}}, Editors. {{Fisheries}} Techniques},
+  author = {McMahon, T.E. and Zale, A.V. and Orth, D.J.},
+  year = {1996},
+  edition = {Second},
+  pages = {83--120},
+  publisher = {{American Fisheries Society}},
+  address = {{Bethesda, Maryland}}
+}
+
 @article{McNyset2015,
   title = {Developing an {{Effective Model}} for {{Predicting Spatially}} and {{Temporally Continuous Stream Temperatures}} from {{Remotely Sensed Land Surface Temperatures}}},
   author = {McNyset, Kristina and Volk, Carol and Jordan, Chris},
@@ -2834,6 +2886,16 @@
   abstract = {The Snake River was once the most productive tributary of one of the greatest salmon producing river systems in the world, the Columbia River. Four dams completed on the lower Columbia River and Snake River from 1938to 7967resulted in decreased,but still robust adult returns of spring and summer chinook salmon (Onchorhynchustshawytscha)to the Snake River basin. Four additional dams completed from 1968to 1975resulted in a systematic decreasein smolt-to-adult return rate that has yet to be reversed. Snake River spring and summer chinook salmon were listed as threatened under the U.S. Endangered SpeciesAct in 1992.Recovery efforts to date have been based on a mechanistic foundation (i.e.,based on engineering and technology) and have failed to achieve recovery. Comprehensive investigations into the plight of Snake River spring and summer chinook salmon concluded that restoring some level of pre-dam ecosystemfunction, rather than continuing to rely on mechanistic actions, has a high probability of achieving recovery. The choice to restore some level of pre-dam ecosystem function will require a significant change in management of the Columbia and Snake rivers.},
   langid = {english},
   file = {C\:\\Users\\mikea\\Zotero\\storage\\5XNAKHIC\\Nemeth and Kiefer - 1999 - Snake River Spring and Summer Chinook Salmon—The C.pdf}
+}
+
+@incollection{Newcomb2007,
+  title = {Habitat Evaluation},
+  booktitle = {C.{{S}}. {{Guy}} and {{M}}.{{L}}. {{Brown}}, Editors. {{Analysis}} and Interpretation of Freshwater Fisheries Data.},
+  author = {Newcomb, T.J. and Orth, D.J. and Stauffer, D.F.},
+  year = {2007},
+  pages = {843--886},
+  publisher = {{American Fisheries Society}},
+  address = {{Bethesda, Maryland}}
 }
 
 @techreport{NFSC2015,
@@ -3126,6 +3188,15 @@
   pages = {266},
   langid = {english},
   file = {C\:\\Users\\mikea\\Zotero\\storage\\ACERTUMB\\Petrosky et al. - IDAHO HABITAT EVALUATION FOR OFF-SITE MITIGATION R.pdf}
+}
+
+@article{Pitlo1989,
+  title = {Walleye Spawning Habitat in {{Pool}} 13 of the {{Upper Mississippi River}}},
+  author = {Pitlo, Jr., J.},
+  year = {1989},
+  journal = {North American Journal of Fisheries Management},
+  volume = {9},
+  pages = {303--308}
 }
 
 @article{Poe1991,
@@ -3606,6 +3677,15 @@
   abstract = {An increase in studies using restriction site-associated DNA sequencing (RADseq) methods has led to a need for both the development and assessment of novel bioinformatic tools that aid in the generation and analysis of these data. Here, we report the availability of AftrRAD, a bioinformatic pipeline that efficiently assembles and genotypes RADseq data, and outputs these data in various formats for downstream analyses. We use simulated and experimental data sets to evaluate AftrRAD's ability to perform accurate de novo assembly of loci, and we compare its performance with two other commonly used programs, STACKS and PYRAD. We demonstrate that AftrRAD is able to accurately assemble loci, while accounting for indel variation among alleles, in a more computationally efficient manner than currently available programs. AftrRAD run times are not strongly affected by the number of samples in the data set, making this program a useful tool when multicore systems are not available for parallel processing, or when data sets include large numbers of samples.},
   langid = {english},
   file = {C\:\\Users\\mikea\\Zotero\\storage\\3ZFSMW6P\\Sovic et al. - 2015 - AftrRAD a pipeline for accurate and efficient .pdf}
+}
+
+@article{Stanfield1998,
+  title = {A Comparison of Full-Station Visual and Transect Based Methods of Conducting Habitat Surveys in Support of Habitat Suitability Index Models for Southern {{Ontario}}},
+  author = {Stanfield, L.W. and Jones, M.L.},
+  year = {1998},
+  journal = {North American Journal of Fisheries Management},
+  volume = {18},
+  pages = {657--675}
 }
 
 @article{Stapley2010,
